add unknow image and chest only and tp command on feature